# ray-tracer

./: CMakeLists.txt  README.md  build.ps1  compile_commands.json
assets/shaders/: quad.frag  quad.vert
dep/glad/: CMakeLists.txt
dep/glad/include/glad/: gl.h
dep/imgui/: CMakeLists.txt
dep/stb/: CMakeLists.txt
src/: Matrix.hpp  Ray.hpp  Vector3.hpp  camera.hpp  color.hpp  glDraw.cpp  glDraw.hpp  hitRecord.hpp  main.cpp  material.hpp  objects.hpp  ray.hpp  renderer.cpp  renderer.hpp  sphere.hpp  threadPool.cpp  threadPool.hpp  timer.hpp  utils.hpp  world.hpp
tests/: test_vec.cpp
